[package]
name = "rdap_types"
version = "0.1.0"
authors = ["Rory McKinley <rorymckinley@gmail.com>"]
license = "BSD-2-Clause"
keywords = ["rdap", "whois"]
categories = ["network-programming", "parsing", "data-structures"]
readme = "../README.md"
repository = "https://github.com/rorymckinley/test_friendly_rdap_client.git"
homepage = "https://github.com/rorymckinley/test_friendly_rdap_client.git"
documentation = "https://docs.rs/test_friendly_rdap_client"
description = """
A fork of the rdap_client crate, with some extra test plumbing.
"""
edition = "2021"
rust-version = "1.56"
exclude = [".travis.yml", "test_data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
